--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
-  
+
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -19,11 +19,26 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div class="text-center">
+        <h4 class="alert-heading">Iniciar Sesion</h4>
       </div>
+
+      <form class="signin" >
+        <label>
+          Email
+          <input type="email" name="email" id="email"/>
+        </label>
+        <label>
+          Contraseña
+          <input type="password" name="password" id="password"/>
+        </label>
+        <br>
+        <button id="button">Iniciar</button>
+      </form>
+
     </div>
   </main>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
