--- a/categories.html
+++ b/categories.html
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="logout">Cerrar Sesion</a>
+          </li>
           <li class="nav-item">br
           </li>
         </ul>
