--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es"> 
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -8,35 +8,40 @@
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
+
   <link href="css/styles.css" rel="stylesheet">
   <style>
     body {
-      background-color: rgb(248, 249, 250);
+      background-color: rgb(255, 255, 255);
     }
   </style>
 </head>
 
 <body>
-  <main class="mt-5">
-    <div class="container">
-      <div class="text-center">
-        <h4 class="alert-heading">Iniciar Sesion</h4>
-      </div>
+  <main class="text-center">
+<div class="signin" >
+        <form class="" name="login" id="login">
 
-      <form class="signin" >
-        <label>
-          Email
-          <input type="email" name="email" id="email"/>
-        </label>
-        <label>
-          Contraseña
-          <input type="password" name="password" id="password"/>
-        </label>
-        <br>
-        <button id="button">Iniciar</button>
-      </form>
+          <img class="card-img" src="img/login.png" alt="eMercado">
+          <h1 class="h3 mb-3 fw-normal">Inicio de sesión</h1>
 
-    </div>
+          <div class="form-floating">
+            <input class="form-control" type="email" name="email" id="email" />
+            <label for="email">Email</label>
+            <br>
+            <div id="mensajee"></div>
+          </div>
+          <br>
+          <div class="form-floating">
+            <input class="form-control" type="password" name="password" id="password" />
+            <label for="password">Contraseña</label>
+            <br>
+            <div id="mensajep"></div>
+          </div>
+          <br>
+          <button class="w-100 btn btn-lg btn-primary" type="submit" id="button">Ingresar</button>
+        </form>
+</div>
   </main>
 
   <footer class="text-muted">
