--- a/products.html
+++ b/products.html
@@ -31,19 +31,27 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#" id="logout">Cerrar Sesion</a>
+          </li>
+          <li class="nav-item">
           </li>
         </ul>
       </div>
     </div>
   </nav>
+
   <main class="pb-5 container">
+
     <div class="container">
-      
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div class="text-center">
+        <h1>Productos</h1>
+        <p>Veras aquí todos los productos de la categoria Autos</p>
       </div>
+      <div id="prod-list-container"></div>
     </div>
+
   </main>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
