--- a/sell.html
+++ b/sell.html
@@ -30,6 +30,9 @@
             <a class="nav-link active" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#" id="logout">Cerrar Sesion</a>
+          </li>
+          <li class="nav-item">
           </li>
         </ul>
       </div>
