--- a/products.html
+++ b/products.html
@@ -43,16 +43,57 @@
     </div>
   </nav>
 
-  <main class="pb-5 container">
+  <main class="pb-5">
 
-    <div class="container">
-      <div class="text-center">
-        <h1>Productos</h1>
-        <p>Veras aquí todos los productos de la categoria Autos</p>
+    <div class="text-center p-4">
+      <h1>Productos</h1>
+      <p id="p1">Veras aquí todos los productos de la categoria </p>
+
+      <div class="container">
+        <div class="row">
+          <div class="col text-end">
+            <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+              <input type="radio" class="btn-check" name="options" id="sortAsc">
+              <label class="btn btn-light" for="sortAsc"><i class="fas fa-sort-amount-down mr-1"></i>$</label>
+              <input type="radio" class="btn-check" name="options" id="sortDesc">
+              <label class="btn btn-light" for="sortDesc"><i class="flippedIcon fas fa-sort-amount-down mr-1"
+                  style="transform: scaleY(-1);"></i>$</label>
+              <input type="radio" class="btn-check" name="options" id="sortByCount" checked>
+              <label class="btn btn-light" for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i>Rel.</label>
+            </div>
+          </div>
+
+        </div>
+        <div class="row justify-content-end">
+          <div class="row container p-0 m-0">
+
+            <div class="col">
+              <p class="font-weight-normal text-end my-2">Buscar:</p>
+            </div>
+            <div class="col">
+              <input id="search" class="form-control buscar">
+            </div>
+
+            <div class="col">
+              <p class="font-weight-normal text-end my-2">Precio</p>
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+            </div>
+            <div class="col-3 p-0">
+              <div class="btn-group" role="group">
+                <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+                <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="prod-list-container"></div>
+
       </div>
-      <div id="prod-list-container"></div>
-    </div>
-
   </main>
 
   <footer class="text-muted">
