--- a/cart.html
+++ b/cart.html
@@ -30,24 +30,96 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="my-profile.html" id="usuario"></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="logout">Cerrar Sesion</a>
-          </li>
-          <li class="nav-item">
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+              <li><a class="dropdown-item" href="cart.html">Mi Carrito</a></li>
+              <li><a class="dropdown-item" href="my-profile.html">Mi Perfil</a></li>
+              <li><a class="dropdown-item" href="#" id="logout">Cerrar Sesion</a></li>
+            </ul>
           </li>
         </ul>
+        </div>
+
       </div>
     </div>
   </nav>
   <main>
+
+
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <h1 class="text-center">Carrito de Compras</h1>
+      <br>
+      <h2 class="fs-3">Articulos a Comprar</h2>
+      <table class="table" id="cart">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Costo</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Subtotal</th>
+          </tr>
+        </thead>
+        <tbody id="cart-products">
+        </tbody>
+      </table>
+      
+      <b>
+        <p>Total: <span id="cart-total">0</span></p>
+      </b>
+
+      <div>
+        <h2>Tipo de envío</h2>
+        <form class="row g-3">
+
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+            <label class="form-check-label" for="flexRadioDefault1">
+              Premium 2 a 5 días (115%)
+            </label>
+          </div>
+
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+            <label class="form-check-label" for="flexRadioDefault2">
+              Express 5 a 8 días (7%)
+            </label>
+          </div>
+
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+            <label class="form-check-label" for="flexRadioDefault2">
+              Standar 12 a 15 días (5%)
+            </label>
+          </div>
+
+          <div class="col-md-6">
+            <label for="inputAddress" class="form-label">Calle</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="">
+          </div>
+          <div class="col-md-3">
+            <label for="inputAddress2" class="form-label">Número</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="">
+          </div>
+          <div class="col-6">
+            <label for="inputAddress" class="form-label">Esquina</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="">
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Comprar</button>
+          </div>
+        </form>
+
       </div>
     </div>
   </main>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
