--- a/product-info.html
+++ b/product-info.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Inicio</a>
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="categories.html">Categorías</a>
@@ -32,14 +32,29 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="my-profile.html" id="usuario"></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="logout">Cerrar Sesion</a>
-          </li>
-          <li class="nav-item">
           </li>
         </ul>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown"
+          aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                <li><a class="dropdown-item" href="cart.html">Mi Carrito</a></li>
+                <li><a class="dropdown-item" href="my-profile.html">Mi Perfil</a></li>
+                <li><a class="dropdown-item" href="#" id="logout">Cerrar Sesion</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
       </div>
     </div>
   </nav>
@@ -49,7 +64,15 @@
         <h2>Descripción del producto</h2>
         <p class="lead">Encontrarás aquí toda la información del producto seleccionado.</p>
       </div>
-      <h3 id="productName"></h3>
+      <div class="row">
+        <div class="col">
+          <h3 id="productName"></h3>
+        </div>
+        <div class="col col-lg-2">
+          <button id="comprar" type="submit" class="btn btn-success">Comprar</button>
+        </div>
+      </div>
+
       <hr class="my-3">
       <section id="product-info-section">
 
