--- a/cart.html
+++ b/cart.html
@@ -44,9 +44,9 @@
             </ul>
           </li>
         </ul>
-        </div>
-
       </div>
+
+    </div>
     </div>
   </nav>
   <main>
@@ -64,57 +64,144 @@
             <th scope="col">Costo</th>
             <th scope="col">Cantidad</th>
             <th scope="col">Subtotal</th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody id="cart-products">
         </tbody>
       </table>
-      
-      <b>
-        <p>Total: <span id="cart-total">0</span></p>
-      </b>
 
       <div>
         <h2>Tipo de envío</h2>
-        <form class="row g-3">
+        <form class="row g-3 needs-validation" novalidate>
+          <div class="radios">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="costoenvio" id="radio15" value="15" checked>
+              <label class="form-check-label" for="radio15">
+                Premium 2 a 5 días (15%)
+              </label>
+            </div>
 
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-            <label class="form-check-label" for="flexRadioDefault1">
-              Premium 2 a 5 días (115%)
-            </label>
-          </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="costoenvio" id="radio7" value="7">
+              <label class="form-check-label" for="radio7">
+                Express 5 a 8 días (7%)
+              </label>
+            </div>
 
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-            <label class="form-check-label" for="flexRadioDefault2">
-              Express 5 a 8 días (7%)
-            </label>
-          </div>
-
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-            <label class="form-check-label" for="flexRadioDefault2">
-              Standar 12 a 15 días (5%)
-            </label>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="costoenvio" id="radio5" value="5">
+              <label class="form-check-label" for="radio5">
+                Standar 12 a 15 días (5%)
+              </label>
+            </div>
           </div>
 
           <div class="col-md-6">
             <label for="inputAddress" class="form-label">Calle</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="">
+            <input type="text" class="form-control" id="inputAddress" placeholder="" required>
           </div>
           <div class="col-md-3">
             <label for="inputAddress2" class="form-label">Número</label>
-            <input type="text" class="form-control" id="inputAddress2" placeholder="">
+            <input type="text" class="form-control" id="inputAddress2" placeholder="" required>
           </div>
           <div class="col-6">
             <label for="inputAddress" class="form-label">Esquina</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="">
+            <input type="text" class="form-control" id="inputAddress" placeholder="" required>
           </div>
+
+          <hr>
+          <h2>Costos</h2> cart-products
+          <div class="text">
+            <div class="border rounded-top p-2 d-flex justify-content-between">
+              <div>
+                <p class="text-left m-0">Subtotal</p>
+                <p class="text-left text-muted m-0">Costo unitario del producto por cantidad</p>
+              </div>
+              <p class="text-right text-muted">U$S <span id="cart-subtotal">0</span></p>
+            </div>
+            <div class="border p-2 d-flex justify-content-between">
+              <div>
+                <p class="text-left m-0">Costo de envio</p>
+                <p class="text-left font text-muted m-0">Segun tipo de envio</p>
+              </div>
+              <p class="text-right text-muted">U$S <span id="cart-envio">0</span></p>
+            </div>
+            <div class="border rounded-bottom p-2 d-flex justify-content-between">
+              <p class="text-left m-0">Total ($)</p>
+              <p class="text-right fw-bold">U$S <span id="cart-total">0</span></p>
+            </div>
+          </div>
+          <hr>
+
+          <div>
+            <h2>Forma de pago</h2>
+            <span id='test' class="d-none text-danger">No ha seleccionado</span>
+            <a class="" id='tyc' data-bs-toggle="modal" data-bs-target="#exampleModal"
+              data-bs-whatever="@mdo">Seleccionar</a>
+          </div>
+
+
           <div class="col-12">
             <button type="submit" class="btn btn-primary">Comprar</button>
           </div>
-        </form>
+
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Forma de pago</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form class="needs-validation" novalidate>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="formadepago" id="tarjeta" value="tarjeta"
+                        required>
+                      <label class="form-check-label" for="tarjeta">
+                        Tarjeta de crédito
+                      </label>
+                    </div>
+                    <hr>
+                    <div class="d-flex">
+                      <div class="col-md-6 m-2">
+                        <label for="ntarjeta" class="form-label">Número de tarjetas</label>
+                        <input type="text" class="form-control" name="ntarjeta" id="ntarjeta" placeholder="" required>
+                      </div>
+                      <div class="col-md-3 m-2">
+                        <label for="cseguridad" class="form-label">Código de seg.</label>
+                        <input type="text" class="form-control" name="cseguridad" id="cseguridad" placeholder="" required>
+                      </div>
+                    </div>
+                    <div class="col-md-6 m-2">
+                      <label for="vencimiento" class="form-label">Vencimiento (MM/AA)</label>
+                      <input type="text" class="form-control" name="vencimiento" id="vencimiento" placeholder="" required>
+                    </div>
+                    <br>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="formadepago" id="transferencia" value="transfer"
+                        required>
+                      <label class="form-check-label" for="transferencia">
+                        Transferencia Bancaria
+                      </label>
+                    </div>
+                    <hr>
+                    <div class="col-md-6 m-2">
+                      <label for="ncuenta" class="form-label">Número de cuenta</label>
+                      <input type="text" class="form-control" name="ncuenta" id="ncuenta" placeholder="" required>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="alert alert-success d-none" id="comprado" role="alert">
+            ¡Has comprado con éxito!
+          </div>
+        </form>      
 
       </div>
     </div>
