--- a/cart.html
+++ b/cart.html
@@ -111,7 +111,7 @@
           </div>
 
           <hr>
-          <h2>Costos</h2> cart-products
+          <h2>Costos</h2> 
           <div class="text">
             <div class="border rounded-top p-2 d-flex justify-content-between">
               <div>
