--- a/my-profile.html
+++ b/my-profile.html
@@ -44,36 +44,76 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+              <li><a class="dropdown-item" href="cart.html">Mi Carrito</a></li>
+              <li><a class="dropdown-item" href="my-profile.html">Mi Perfil</a></li>
+              <li><a class="dropdown-item" href="#" id="logout">Cerrar Sesion</a></li>
+            </ul>
           </li>
         </ul>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                
-              </a>
-              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                <li><a class="dropdown-item" href="cart.html">Mi Carrito</a></li>
-                <li><a class="dropdown-item" href="my-profile.html">Mi Perfil</a></li>
-                <li><a class="dropdown-item" href="#" id="logout">Cerrar Sesion</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-
       </div>
+
+    </div>
     </div>
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <br>
+      <div class="d-flex justify-content-between">
+        <h1>Perfil</h1>
+        <img src="" class="img-thumbnail img_perfil" id="fperfil" alt="foto perfil">
       </div>
+      <br>
+      <hr>
+      <form class="needs-validation" novalidate>
+        <div class="d-flex justify-content-between m-3">
+        <div class="col-6 m-3">
+          <label for="inputAddress" class="form-label">Primer nombre*</label>
+          <input type="text" class="form-control" id="pnombre" required>
+        </div>
+        <div class="col-6 m-3">
+          <label for="inputAddress2" class="form-label">Segundo nombre</label>
+          <input type="text" class="form-control" id="snombre">
+        </div>
+      </div>
+      <div class="d-flex justify-content-between m-3">
+        <div class="col-6 m-3">
+          <label for="inputAddress" class="form-label">Primer apellido*</label>
+          <input type="text" class="form-control" id="papellido" required>
+        </div>
+        <div class="col-6 m-3">
+          <label for="inputAddress" class="form-label">Segundo apellido</label>
+          <input type="text" class="form-control" id="sapellido">
+        </div>
+      </div>
+      <div class="d-flex justify-content-between m-3">
+        <div class="col-6 m-3">
+          <label for="email" class="form-label">E-mail</label>
+          <input type="email" class="form-control" id="email" disabled>
+        </div>
+        <div class="col-6 m-3">
+          <label for="file" class="form-label">Imagen perfil</label>
+          <input class="form-control" type="file" id="file" name="file" accept="image/*">
+        </div>
+      </div>
+      <div class="d-flex justify-content-between m-3">
+      <div class="col-6 m-3">
+        <label for="telefono" class="form-label">Télefono de contacto*</label>
+        <input type="tel" class="form-control" id="telefono" required>
+      </div>
+    </div>
+      <hr>
+        <div class="col-12">
+          <button id="guardar" type="submit" class="btn btn-primary">Guardar cambios</button>
+        </div>
+      </form>
+
     </div>
   </main>
   <footer class="text-muted">
