CSS de selector de idioma y ajuste en menu mobile

--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
                 <li><a href="#about" class="a1">Sobre Mí</a></li>
                 <li><a href="#projects" class="a2">Proyectos</a></li>
                 <li><a href="#educacion" class="a3">Educación</a></li>
-                <li><a href="#contact" class="a4">Contacto</a></li>                
+                <li><a href="#contact" class="a4">Contacto</a></li>    
+                <li><div class="language-selector">
+                    <select id="language">
+                        <option value="es">Español</option>
+                        <option value="en">English</option>
+                    </select>
+                </div></li>            
             </ul>
         </nav>
     </div>
@@ -177,7 +183,7 @@
             </div>
             <div class="education-container shadow">
                 <h3>Microsoft - INEFOP</h3>
-                <p>Habilidades Digitales</p>
+                <p>HTML & Office</p>
                 <p>2021</p>
             </div>
             <div class="education-container shadow">
