--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <link rel='stylesheet'
         href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <title>Nathan de Barros</title>
+
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FRP85NM511"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-FRP85NM511');
+    </script>
 </head>
 
 <body>
@@ -26,7 +37,7 @@
             </div>
         </div>
     </header>
-    
+
 
     <!-- Menú de escritorio -->
     <nav class="desktop-menu">
@@ -34,13 +45,14 @@
             <li><a href="#about" class="a1">Sobre Mí</a></li>
             <li><a href="#projects" class="a2">Proyectos</a></li>
             <li><a href="#educacion" class="a3">Educación</a></li>
-            <li><a href="#contact" class="a4">Contacto</a></li>            
-            <li><div class="language-selector">
-                <select id="language">
-                    <option value="es">Español</option>
-                    <option value="en">English</option>
-                </select>
-            </div>
+            <li><a href="#contact" class="a4">Contacto</a></li>
+            <li>
+                <div class="language-selector">
+                    <select id="language">
+                        <option value="es">Español</option>
+                        <option value="en">English</option>
+                    </select>
+                </div>
             </li>
         </ul>
     </nav>
@@ -56,13 +68,15 @@
                 <li><a href="#about" class="a1">Sobre Mí</a></li>
                 <li><a href="#projects" class="a2">Proyectos</a></li>
                 <li><a href="#educacion" class="a3">Educación</a></li>
-                <li><a href="#contact" class="a4">Contacto</a></li>    
-                <li><div class="language-selector">
-                    <select id="language">
-                        <option value="es">Español</option>
-                        <option value="en">English</option>
-                    </select>
-                </div></li>            
+                <li><a href="#contact" class="a4">Contacto</a></li>
+                <li>
+                    <div class="language-selector">
+                        <select id="language">
+                            <option value="es">Español</option>
+                            <option value="en">English</option>
+                        </select>
+                    </div>
+                </li>
             </ul>
         </nav>
     </div>
@@ -73,12 +87,14 @@
         <div class="about-container">
             <img src="img/dev.png" alt="Desarrollador Web">
             <div>
-                <p class="about-description">Desarrollador web apasionado con habilidades destacadas en HTML, CSS, JavaScript,
+                <p class="about-description">Desarrollador web apasionado con habilidades destacadas en HTML, CSS,
+                    JavaScript,
                     React y PHP. Mi enfoque principal se centra en la creación de experiencias de usuario cautivadoras y
                     funcionales. He contribuido al éxito de proyectos mediante el diseño frontend atractivo y la
                     implementación backend eficiente utilizando PHP y MySQL.
                 </p>
-                <p class="about-description-2">Con una actitud proactiva y un compromiso constante con la mejora continua, estoy preparado para
+                <p class="about-description-2">Con una actitud proactiva y un compromiso constante con la mejora
+                    continua, estoy preparado para
                     enfrentar desafíos y aportar soluciones innovadoras. Mi habilidad para adaptarme a nuevas
                     tecnologías y
                     mi enfoque en mantenerme actualizado con las últimas tendencias me posicionan como un profesional
