--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
         href='https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-straight/css/uicons-regular-straight.css'>
     <link rel='stylesheet'
         href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-    <title>Nathan de Barros</title>
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Desarrollador web apasionado con habilidades en HTML, CSS, JavaScript, React, PHP y MySQL. Explora mi portfolio para ver proyectos destacados.">
+    <meta name="keywords" content="desarrollador web, HTML, CSS, JavaScript, React, PHP, MySQL, portfolio">
+    <meta name="author" content="Nathan de Barros">
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FRP85NM511"></script>
     <script>
@@ -22,6 +26,7 @@
 
         gtag('config', 'G-FRP85NM511');
     </script>
+    <title>Nathan de Barros</title>
 </head>
 
 <body>
