--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         content="Desarrollador web apasionado con habilidades en HTML, CSS, JavaScript, React, PHP y MySQL. Explora mi portfolio para ver proyectos destacados.">
     <meta name="keywords" content="desarrollador web, HTML, CSS, JavaScript, React, PHP, MySQL, portfolio">
     <meta name="author" content="Nathan de Barros">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FRP85NM511"></script>
