--- a/index.html
+++ b/index.html
@@ -220,14 +220,25 @@
     <section class="contact" id="contact">
         <h2>Contacto</h2>
         <ul class="contact-list">
-            <li><i class="fi fi-rs-phone-call icono"></i>098221793</li>
-            <li><i class="fi fi-rs-envelope icono"></i>nathandb7@gmail.com</li>
-            <li><i class="fi fi-rs-site-alt icono"></i><a href="https://nathandb7.github.io/">nathandb7.github.io</a>
+            <li>
+                <i class="fi fi-rs-phone-call icono"></i>
+                <a href="tel:+59898221793">(+598) 98 221 793</a>
             </li>
-            <li><i class="fi fi-brands-github icono"></i><a href="https://github.com/nathandb7">github.com/nathandb7</a>
+            <li>
+                <i class="fi fi-rs-envelope icono"></i>
+                <a href="mailto:nathandb7@gmail.com">nathandb7@gmail.com</a>
+            </li>
+            <li>
+                <i class="fi fi-rs-site-alt icono"></i>
+                <a href="https://nathandb7.github.io/">nathandb7.github.io</a>
+            </li>
+            <li>
+                <i class="fi fi-brands-github icono"></i>
+                <a href="https://github.com/nathandb7">github.com/nathandb7</a>
             </li>
         </ul>
     </section>
+    
 
     <footer>
         <div>
