--- a/index.html
+++ b/index.html
@@ -114,14 +114,6 @@
         <div class="container">
 
             <div class="project">
-                <img src="img/chat-js.png" alt="Proyecto JS">
-                <h3>App - Seguimiento Pacientes Veterinaria</h3>
-                <p>Proyecto con React, Vite, Tailwind CSS, LocalStorage</p>
-                <a href="https://github.com/nathandb7/chat-javascript" class="code">Ver Codigo</a>
-                <a href="https://chat-javascript-r7if.onrender.com/">Ver Proyecto</a>
-            </div>
-
-            <div class="project">
                 <img src="img/citas.png" alt="Proyecto 1">
                 <h3>App - Seguimiento Pacientes Veterinaria</h3>
                 <p>Proyecto con React, Vite, Tailwind CSS, LocalStorage</p>
@@ -180,6 +172,14 @@
                 <h3>Sitio Web - Blog Neozix</h3>
                 <p>Proyecto con Wordpress</p>
                 <a href="https://neozix.com/">Ver Proyecto</a>
+            </div>
+
+            <div class="project">
+                <img src="img/chat-js.png" alt="Proyecto JS">
+                <h3>App - Live Chat JavaScript</h3>
+                <p>Proyecto con JS, Node, Express y mongoDB</p>
+                <a href="https://github.com/nathandb7/chat-javascript" class="code">Ver Codigo</a>
+                <a href="https://chat-javascript-r7if.onrender.com/">Ver Proyecto</a>
             </div>
 
         </div>
