cambios en el diseño

--- a/index.html
+++ b/index.html
@@ -248,12 +248,13 @@
         </ul>
     </section>
 
-
+    <!-- footer -->
     <footer>
         <div>
             <p>© 2024 Nathan de Barros. Todos los derechos reservados.</p>
         </div>
     </footer>
+    <!-- footer -->
 
     <script src="js/script.js"></script>
     <script src="js/translation.js" defer></script>
