--- a/index.html
+++ b/index.html
@@ -167,8 +167,9 @@
             <div class="project">
                 <img src="img/bienesraices.png" alt="Proyecto 6">
                 <h3>Sitio Web - Bienes Raices</h3>
-                <p>Sitio de bienes raices HTML, SASS, Gulp, PHP, MySql</p>
-                <a href="https://github.com/nathandb7/bienesraices" class="code">Ver Codigo</a>
+                <p>Sitio de bienes raices HTML, SASS, Gulp, PHP, MySql, MVC</p>
+                <a href="https://github.com/nathandb7/bienesraices-mvc" class="code">Ver Codigo</a>
+                <a href="https://mvcbienesraices.000webhostapp.com/">Ver Proyecto</a>
             </div>
 
             <div class="project">
